--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,21 +8,33 @@ on:
   workflow_dispatch:
   # 工作
 jobs:
+  # 构建
   build:
+  # 构建应用使用的系统
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Build
-        run: |
-          chmod +x gradlew
-          docker compose up
 
+  # 步骤
+    steps:
+  # 使用 
+    - uses: actions/checkout@v2
+  # 使用的java版本   
+    - name: Use Java
+      uses: actions/setup-java@v1
+      with:
+          java-version: 11
+
+  # 验证 Gradle 包装器 
+    - name: Validate Gradle Wrapper
+      uses: gradle/wrapper-validation-action@v1
+
+  # 构建app
+    - name: Build app
+      run: bash ./gradlew assembleRelease
 
   #发布构建的app
-      - name: Upload built apk
-        if: success()
-        uses: actions/upload-artifact@v2
-        with:
-            name: Release_${{ env.VERSION }}.apk
-            path: ${{ github.workspace }}/app/build/outputs/apk/release/${{ env.APK_FILE }}
+    - name: Upload built apk
+      if: success()
+      uses: actions/upload-artifact@v2
+      with:
+          name: Release_${{ env.VERSION }}.apk
+          path: ${{ github.workspace }}/app/build/outputs/apk/release/${{ env.APK_FILE }}
